interactive Image structure

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@using WebApp1.Models
-@model IEnumerable<WebApp1.Models.Productwaarde>
+@model WebApp1.Models.Datastructure
 @{
     ViewData["Title"] = "Home Page";
-    List<Productwaarde> products = Model.ToList();
+    List<Productwaarde> products = Model.productwaardes.ToList();
 }
 
 <link rel="stylesheet" href="~/css/interactiveimage.css">
@@ -10,9 +10,9 @@
 <link rel="stylesheet" href="~/css/image.css">
 <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <div class="section">
   <h1>Welkom bij de webshop!</h1>
 
@@ -22,75 +22,100 @@
 <div class="popup" onclick="togglePopup1()" id="cat0">
  
     <div class="sel popuptext" id="myPopup1">
-      <div id="menu" class="menu"></div>
+      <div id="menu"></div>
     </div>
 
   <img src="~/images/circle.png" class="category" >
 </div>
 
 <div class="popup" onclick="togglePopup2()" id="cat1">
+
     <div class="sel popuptext" id="myPopup2">
-      <div id="menu2" class="menu"></div>
+      <div id="menu2"></div>
     </div>
 <img src="~/images/circle.png" class="category">
 </div>
 </div>
 <script>
 
-function menuToElement(menu) {
-    const ul = document.createElement("ul");
-    ul.className = "imageDropdownUl";
-    for (const item of menu) {
-      
+function menuToElement(item) {
         const li = document.createElement("li");
-        if (Object(item) === item) {
-            li.textContent = item.text + ' \u25BD';         
+        if (item.children.length>0) {
+            li.textContent = item.name + ' \u25BD';
             li.className = "btn btn-primary";
-            
-            li.appendChild(menuToElement(item.children));
-            
 
-        } else {
+            const ul = document.createElement("ul");
+            ul.className = "imageDropdownUl";
+            for (var i=0; i<item.children.length; i++) {
+              var child = item.children[i];
+              console.log(item);
+              ul.appendChild(menuToElement(child));
+            }  
+
+            li.appendChild(ul);
             
+        } else {
+        
             const a = document.createElement("a");
             li.appendChild(a);
-            a.textContent = item;
+            a.textContent = item.name;
             a.className = "btn btn-secondary";
         }
-        ul.appendChild(li);
-        //console.log(menu);
-    }
-    
+
+  return li;
+
+
     return ul;
    
 }
 
  
-
+/*
 var categories = [{ 
     text: "engine",
     children: ["marco",2,3,5,7,9, { 
-        text: "piston",
+        text: "piston1",
         children: [4,5,6, { 
-        text: "piston",
-        children: [4,5,6]
-    }]
-    },10,11,12]   
+          text: "piston2",
+          children: [4,5,6, {
+            text: "piston3",
+            children: [4,5,6, {
+              text: "piston4",
+              children: [4,5,6]           
+            }]
+          }]
+      }]   
+    }]   
 }, {
     text: "tire",
     children: [7,8,9]
-}];
+}]; 
+*/
+var categories = @Html.Raw(Json.Serialize(Model.kaas));
 
-console.log(categories[0]);
+console.log(categories);
+for (const item of categories.children){
+if (item.name == "Zeilboot"){
+  const ul = menuToElement(item);
+  document.getElementById("menu").appendChild(ul);
+}
+else if (item.name == "Roeiboot"){
+  const ul2 = menuToElement(item);
+  document.getElementById("menu2").appendChild(ul2);
+}
+}
 
-var engine = [categories[0]];
-var tire = [categories[1]];
+//var engine = [categories[0]];
+//console.log(engine);
+//var tire = [categories[1]];
 
-const ul = menuToElement(engine);
-document.getElementById("menu").appendChild(ul);
 
-const ul2 = menuToElement(tire);
-document.getElementById("menu2").appendChild(ul2);
+
+//const ul = menuToElement(categories);
+//document.getElementById("menu").appendChild(ul);
+
+//const ul2 = menuToElement(tire);
+//document.getElementById("menu2").app, endChild(ul2);
 
 
 </script>
@@ -99,7 +124,7 @@ document.getElementById("menu2").appendChild(ul2);
 <script>
 
 //When the user clicks on <div>, open the popup
-for (const item of categories){
+for (const item of categories.children){
 function togglePopup1() {
     var popup = document.getElementById("myPopup1");
     popup.classList.toggle("show");
@@ -109,13 +134,6 @@ function togglePopup2() {
     var popup = document.getElementById("myPopup2");
     popup.classList.toggle("show");
 }
-
-
-$(".btn-primary").on('click', function(event){  
-    event.stopImmediatePropagation();
-    $(this).children('.imageDropdownUl').toggle();
-});
-
 
 
 //dropdown in popup
@@ -339,160 +357,4 @@ $('body').click(function (e) {
   </div>
 </div>
 
-
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.js"></script>
-<script>
-  var text = [];
-  var imgs = [];
-
-  @foreach (var item in Model)
-  {
-    if (item.DiscountedPrice != -1)
-    {
-      @:text.push("@item.Title");
-    } 
-  }
-
-  @foreach (var item in Model)
-  {
-    if (item.DiscountedPrice != -1)
-    {
-      @:imgs.push('/images/products/' + "@item.Image");
-    } 
-  }
-
-  var container = document.getElementsByClassName('imgDiv');
-  var container2 = document.getElementsByClassName('textDiv');
-  var divContainer = document.getElementsByClassName('cssSelector');
-  var aContainer = document.getElementsByClassName('category');
-
-  count = 0;
-
-  for(var i=0; i<container.length+1; i++) {
-
-    if (imgs[i]!=null && text[i]!=null){
-
-      var a = document.createElement('a');
-      a.href = "https://localhost:5001/ViewProduct?id="+(i+1).toString();
-      a.className = "category";
-      a.id = "deg" + count;
-      divContainer[i].appendChild(a);
-
-      var divInA = document.createElement('div');
-      divInA.className = "textDiv";
-      var divInA2 = document.createElement('div');
-      divInA2.className = "imgDiv";
-
-      aContainer[i].appendChild(divInA);
-      aContainer[i].appendChild(divInA2);
-
-      var img = document.createElement('img');
-      img.src = imgs[i];
-      var h = document.createElement('span');
-      var t = document.createTextNode(text[i]);
-      container[i].appendChild(img);
-      container2[i].appendChild(t);
-    
-      count = count + 36;
-    }
-  }
-
-  var cssSelectorRight = anime({
-    targets: '#cssSelectorRight',
-    translateX: "9em",
-    opacity: 1,
-    easing: 'linear',
-    delay: 1000,
-    duration: 2000
-  });
-
-  var cssSelectorLeft = anime({
-    targets: '#cssSelectorLeft',
-    translateX: "-9em",
-    opacity: 1,
-    easing: 'linear',
-    delay: 1000,
-    duration: 2000
-  });
-
-  var cssSelectorBottomRight = anime({
-    targets: '#cssSelectorBottomRight',
-    translateX: "4em",
-    translateY: "9em",
-    opacity: 1,
-    easing: 'linear',
-    delay: 1000,
-    duration: 2000
-  });
-
-  var cssSelectorBottomLeft = anime({
-    targets: '#cssSelectorBottomLeft',
-    translateX: "-4em",
-    translateY: "9em",
-    opacity: 1,
-    easing: 'linear',
-    delay: 1000,
-    duration: 2000
-  });
-
-  var cssSelectorTopLeft = anime({
-    targets: '#cssSelectorTopLeft',
-    translateX: "-4em",
-    translateY: "-9em",
-    opacity: 1,
-    easing: 'linear',
-    delay: 1000,
-    duration: 2000
-  });
-
-  var cssSelectorTopRight = anime({
-    targets: '#cssSelectorTopRight',
-    translateX: "4em",
-    translateY: "-9em",
-    opacity: 1,
-    easing: 'linear',
-    delay: 1000,
-    duration: 2000
-  });
-
-  var cssSelectorBottom1 = anime({
-    targets: '#cssSelectorBottom1',
-    translateX: "1em",
-    translateY: "9em",
-    opacity: 1,
-    easing: 'linear',
-    delay: 1000,
-    duration: 2000
-  });
-
-  var cssSelectorBottom2 = anime({
-    targets: '#cssSelectorBottom2',
-    translateX: "-1em",
-    translateY: "9em",
-    opacity: 1,
-    easing: 'linear',
-    delay: 1000,
-    duration: 2000
-  });
-
-  var cssSelectorTop1 = anime({
-    targets: '#cssSelectorTop1',
-    translateX: "-1em",
-    translateY: "-9em",
-    opacity: 1,
-    easing: 'linear',
-    delay: 1000,
-    duration: 2000
-  });
-
-  var cssSelectorTop2 = anime({
-    targets: '#cssSelectorTop2',
-    translateX: "1em",
-    translateY: "-9em",
-    opacity: 1,
-    easing: 'linear',
-    delay: 1000,
-    duration: 2000
-  });
-</script> -->
 
