--- a/Views/Cart/oldOrderDetails.cshtml
+++ b/Views/Cart/oldOrderDetails.cshtml
@@ -1,7 +1,9 @@
 <link rel="stylesheet" href="~/css/product_creation_generic.css">
 <link rel="stylesheet" href="~/css/favorites.css">
 <div class="pageRoot">
-    <h2>Jouw vorige Bestellingen</h2>
+    <h2>Bestelling Details</h2>
+    <strong>Verzendkosten: </strong>€@ViewBag.shippingFee
+    <br>
     <table class="table">
         <thead>
         <tr>
