--- a/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
+++ b/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
@@ -4,9 +4,14 @@
     ViewData["Title"] = "Confirm email";
 }
 
+<link rel="stylesheet" href="~/css/edit_product.css">
+
+
+<div class="pageRoot"> 
 <h2>@ViewData["Title"]</h2>
 <div>
     <p>
-        Thank you for confirming your email.
+        Bedankt voor de bevestiging.
     </p>
+</div>
 </div>
