--- a/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -1,11 +1,14 @@
 @page
 @model ForgotPasswordModel
 @{
-    ViewData["Title"] = "Forgot your password?";
+    ViewData["Title"] = "Wachtwoord vergeten?";
 }
 
+<link rel="stylesheet" href="~/css/edit_product.css">
+
+<div class="pageRoot"> 
 <h2>@ViewData["Title"]</h2>
-<h4>Enter your email.</h4>
+<h4>Vul hieronder je email address in</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -16,11 +19,11 @@
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">Submit</button>
+            <button type="submit" class="btn btn-primary">Verzenden</button>
         </form>
     </div>
 </div>
-
+</div>
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
