--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -3,7 +3,10 @@
 @{
     ViewData["Title"] = "2";
 }
+<link rel="stylesheet" href="~/css/edit_product.css">
 
+
+<div class="pageRoot"> 
 <h4>@ViewData["Title"]</h4>
 @Html.Partial("_StatusMessage", Model.StatusMessage)
 <div class="row">
@@ -35,9 +38,10 @@
                 <input asp-for="Input.PhoneNumber" class="form-control" />
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">Save</button>
+            <button type="submit" class="btn btn-primary">Bewaar</button>
         </form>
     </div>
+</div>
 </div>
 
 @section Scripts {
