--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,8 +4,11 @@
     ViewData["Title"] = "Registreren";
 }
 
-<h2>@ViewData["Title"]</h2>
+<link rel="stylesheet" href="~/css/edit_product.css">
 
+
+<div class="pageRoot"> 
+    <h2>@ViewData["Title"]</h2>
 <div class="row">
     <div class="col-md-4">
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
@@ -14,7 +17,7 @@
             <div asp-validation-summary="All" class="text-danger"></div>
             
             <div class="form-group">
-                <label asp-for="Input.Gender"></label>   
+                <label asp-for="Input.Gender"></label><br>   
                 <input type="radio" name="gender" value="male" checked> Meneer<br>
                 <input type="radio" name="gender" value="female"> Mevrouw<br>
                 <span asp-validation-for="Input.Gender" class="text-danger"></span>
@@ -81,9 +84,10 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Register</button>
+            <button type="submit" class="btn btn-primary">Registreer</button>
         </form>
     </div>
+</div>
 </div>
 
 @section Scripts {
