--- a/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -1,11 +1,15 @@
 @page
 @model ForgotPasswordConfirmation
 @{
-    ViewData["Title"] = "Forgot password confirmation";
+    ViewData["Title"] = "Bevestiging wachtwoord vergeten";
 }
 
+
+<link rel="stylesheet" href="~/css/edit_product.css">
+
+<div class="pageRoot"> 
 <h2>@ViewData["Title"]</h2>
 <p>
-    Please check your email to reset your password.
+    Ga naar je mail om je wachtwoord te resetten.
 </p>
-
+</div>
