--- a/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
@@ -1,7 +1,7 @@
 @page
 @model DeletePersonalDataModel
 @{
-    ViewData["Title"] = "Delete Personal Data";
+    ViewData["Title"] = "Account verwijderen";
     ViewData["ActivePage"] = ManageNavPages.DeletePersonalData;
 }
 
@@ -10,7 +10,7 @@
 <div class="alert alert-warning" role="alert">
     <p>
         <span class="glyphicon glyphicon-warning-sign"></span>
-        <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
+        <strong>Deze actie verwijdert uw account permanent en is niet meer terug te halen.</strong>
     </p>
 </div>
 
@@ -25,7 +25,7 @@
             <span asp-validation-for="Input.Password" class="text-danger"></span>
         </div>
         }
-        <button class="btn btn-danger" type="submit">Delete data and close my account</button>
+        <button class="btn btn-danger" type="submit">Verwijder mijn account</button>
     </form>
 </div>
 
