--- a/Areas/Identity/Pages/Account/ResetPassword.cshtml
+++ b/Areas/Identity/Pages/Account/ResetPassword.cshtml
@@ -1,11 +1,14 @@
 @page
 @model ResetPasswordModel
 @{
-    ViewData["Title"] = "Reset password";
+    ViewData["Title"] = "Wachtwoord resetten";
 }
+<link rel="stylesheet" href="~/css/edit_product.css">
 
+
+<div class="pageRoot"> 
 <h2>@ViewData["Title"]</h2>
-<h4>Reset your password.</h4>
+<h4>Reset je wachtwoord hieronder</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -27,9 +30,10 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">Reset</button>
+            <button type="submit" class="btn btn-primary">Reset</button>
         </form>
     </div>
+</div>
 </div>
 
 @section Scripts {
