--- a/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
+++ b/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
@@ -1,10 +1,14 @@
 @page
 @model ResetPasswordConfirmationModel
 @{
-    ViewData["Title"] = "Reset password confirmation";
+    ViewData["Title"] = "Bevestiging wachtwoord reset";
 }
+<link rel="stylesheet" href="~/css/edit_product.css">
 
+
+<div class="pageRoot"> 
 <h2>@ViewData["Title"]</h2>
 <p>
-    Your password has been reset. Please <a asp-page="./Login">click here to log in</a>.
+    Uw wachtwoord is gereset. <a asp-page="./Login">Klik hier om in te loggen</a>.
 </p>
+</div>
