--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -18,9 +18,7 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-            <a class="nav-link" href="@Url.Action("Index", "Home")">Home <span class="sr-only">(current)</span></a>
-        </li>
+
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Producten</a>
             <div id="productsDropdown" class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -60,7 +58,7 @@
         else
         {
             <li class="nav-item">
-                <a href="@Url.Action("Index", "Cart")"><img src="~/Images/ShoppingCart.png" width="40"/></a>
+                <a href="@Url.Action("Index", "Cart")"><img src="~/Images/ShoppingCart.png" width="20"/></a>
             </li>
         }
     </ul>
@@ -68,9 +66,10 @@
 
    <form class="form-inline my-2 my-lg-0" asp-action="Search" asp-controller="Category">
       <input class="form-control mr-sm-2" type="search" name= "search" placeholder="Zoeken..." aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Zoek</button>
+      <button class="btn btn-primary my-2 my-sm-0" type="submit">Zoek</button>
     </form>
   </div>
+
 </nav>
 <br>
 </head>
@@ -162,6 +161,11 @@
                     </li>
                 </ul>            
         </div>
+        <hr/>
+
+    </div>
+    <div>
+        <a class="navbar-brand" href="@Url.Action("Index", "Home")"><img id="siteLogo" src="~/images/boatlogo.png" alt="logo"></a>
     </div>
 </div>
 
