--- a/wwwroot/css/edit_product.css
+++ b/wwwroot/css/edit_product.css
@@ -1,6 +1,6 @@
 div.pageRoot {
     background-color: #ffffff;
-    border-radius: 3px;
+    border-radius: 5px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     padding: 15px;
     margin-left: 20%;
@@ -27,4 +27,18 @@ img.productImage {
 
 #desc {
     margin-top: 20px;
+}
+
+
+
+input{
+    font-family: monospace;
+}
+label{
+    font-family: monospace;
+}
+
+p{
+    font-family: monospace;
+
 }
