Fixed: pagination styling on admin pages + CSV Upload page throwing error when adding attributes

--- a/Views/ProductList/Index.cshtml
+++ b/Views/ProductList/Index.cshtml
@@ -62,7 +62,7 @@
         <tbody id="tableBody">
         </tbody>
     </table>
-    <ul id="pagination" class="pagination" style="margin-top: 10px;">
+    <ul id="pagination" class="pagination flex-wrap" style="margin-top: 10px;">
     </ul>
 </div>
 <br>
