--- a/Views/CategoryList/Index.cshtml
+++ b/Views/CategoryList/Index.cshtml
@@ -50,7 +50,7 @@
         <tbody id="tableBody">
         </tbody>
     </table>
-    <ul id="pagination" class="pagination" style="margin-top: 10px;">
+    <ul id="pagination" class="pagination flex-wrap" style="margin-top: 10px;">
     </ul>
 </div>
 <br>
