--- a/Views/viewProduct/Index.cshtml
+++ b/Views/viewProduct/Index.cshtml
@@ -8,7 +8,15 @@
 }
 <link rel="stylesheet" href="~/css/view_product.css">
 <div class="pageBackground">
-    <div id="category">@viewProductModel.CategoryPath</div>
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            @for (int i = viewProductModel.CategoryPath.Count() - 1; i >= 0; i--)
+            {
+                <li class="breadcrumb-item"><a asp-action="Index" asp-controller="Category" asp-route-categoryId="@viewProductModel.CategoryPath[i][0]">@viewProductModel.CategoryPath[i][1]</a></li>                                                                                                                      
+            }
+            <li class="breadcrumb-item active" aria-current="page">@viewProductModel.Name</li>
+        </ol>
+    </nav>
     <div class="row" id="productHeader">
         <div class="col-6">
             <img src="@imagePath" height="300" width="400" class="productImage"></img>
